[gd_scene load_steps=3 format=3 uid="uid://bv440mct5fn50"]

[ext_resource type="Texture2D" uid="uid://bw04gh5iqdune" path="res://resources/images/bias.png" id="1_gas6e"]
[ext_resource type="Script" path="res://scenes/gui/character_drop_area.gd" id="1_kqc8s"]

[node name="CharacterDropArea" type="TextureRect"]
top_level = true
z_index = -2
z_as_relative = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_gas6e")
expand_mode = 1
stretch_mode = 1
script = ExtResource("1_kqc8s")
metadata/_edit_use_anchors_ = true

[node name="DropTimer" type="Timer" parent="."]
wait_time = 0.07

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0.270588)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[connection signal="timeout" from="DropTimer" to="." method="_on_drop_timer_timeout"]
